--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "clean": "rimraf dist",
+    "build": "NODE_ENV=production npm run clean && webpack -p",
+    "serve": "webpack-dev-server"
   },
   "repository": "",
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "faker": "^3.1.0",
     "lodash": "^4.17.2",
     "react": "^15.4.1",
@@ -27,7 +30,10 @@
     "babel-preset-env": "^1.1.4",
     "babel-preset-react": "^6.16.0",
     "css-loader": "^0.26.1",
+    "html-webpack-plugin": "^2.26.0",
+    "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.0-rc.0"
+    "webpack": "2.2.0-rc.0",
+    "webpack-dev-middleware": "^1.9.0"
   }
 }
